--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,45 +1,47 @@
-version: '3.8'
+version: "3.8"
 
-services:
+services: 
   server:
     image: 'nginx:stable-alpine'
-    ports:
+    build:
+      context: .
+      dockerfile: dockerfiles/nginx.dockerfile
+    ports: 
       - '8000:80'
-    volumes:
+    volumes: 
       - ./src:/var/www/html
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
+    depends_on: 
       - php
       - mysql
   php:
     build:
-      context: ./dockerfiles
-      dockerfile: php.dockerfile
-    volumes:
+      context: .
+      dockerfile: dockerfiles/php.dockerfile
+    volumes: 
       - ./src:/var/www/html:delegated
-    ports:
-      - '3000:3000'
   mysql:
-    image: 'docksal/mysql:8.0-build'
-    env_file:
+    image: arm64v8/mysql:oracle
+    env_file: 
       - ./env/mysql.env
   composer:
     build:
       context: ./dockerfiles
       dockerfile: composer.dockerfile
-    volumes:
+    volumes: 
       - ./src:/var/www/html
   artisan:
     build:
-      context: ./dockerfiles
-      dockerfile: php.dockerfile
-    volumes:
+      context: .
+      dockerfile: dockerfiles/php.dockerfile
+    volumes: 
       - ./src:/var/www/html
-    entrypoint: ["php","/var/www/html/artisan"]    
+    env_file: 
+      - ./env/mysql.env
+    entrypoint: ["php", "/var/www/html/artisan"]
   npm:
-    image: 'node:14'
+    image: node:14
     working_dir: /var/www/html
     entrypoint: ["npm"]
-    volumes:
+    volumes: 
       - ./src:/var/www/html
-  
